# geno

./: .gitignore  README.md
client/: .babelrc  package.json  webpack.config.js
client/src/: index.html  index.tsx
client/src/components/: AncestorGraph.tsx  Attributes.tsx  Citations.tsx  Event.tsx  Graph.tsx  Map.tsx  Media.tsx  Notes.tsx  PersonLink.tsx  Rating.tsx  Tags.tsx
client/src/pages/: Person.tsx
client/src/utils/: hooks.ts  i18next.ts  math.ts
server/: dataloader.py  pyproject.toml  server.py
