[tool.poetry]
name = "geno-server"
version = "0.1.0"
description = ""
authors = ["Gustav Tiger <gustav@tiger.name>"]

[tool.poetry.dependencies]
python = "^3.5"
flask = "^1.1"
flask_cors = "^3.0"
flask_graphql = "^2.0"
graphene = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
